--- a/package.json
+++ b/package.json
@@ -1,21 +1,32 @@
 {
-	"name": "NodeTGBot",
-	"version": "0.0.1",
-	"description": "Node Telegram Bot base.",
-	"main": "server.js",
-	"scripts": {
-		"start": "node server.js"
-	},
-	"dependencies": {
-		"body-parser": "^1.19.0",
-		"dotenv": "^8.0.0",
-		"easy-telegram-mtproto": "^1.0.4",
-		"express": "^4.16.4",
-		"figlet": "^1.2.3",
-		"telegram-bot-client": "^2.1.1"
-	},
-	"repository": {
-		"url": "https://github.com/zRattly/NodeTGBot"
-	},
-	"license": "MIT"
+  "//1": "describes your app and its dependencies",
+  "//2": "https://docs.npmjs.com/files/package.json",
+  "//3": "updating this file will download and update your packages",
+  "name": "hello-express",
+  "version": "0.0.1",
+  "description": "A simple Node app built on Express, instantly up and running.",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.0.0",
+    "easy-telegram-mtproto": "^1.0.4",
+    "express": "^4.16.4",
+    "figlet": "^1.2.3",
+    "telegram-bot-client": "^2.1.1"
+  },
+  "engines": {
+    "node": "8.x"
+  },
+  "repository": {
+    "url": "https://glitch.com/edit/#!/hello-express"
+  },
+  "license": "MIT",
+  "keywords": [
+    "node",
+    "glitch",
+    "express"
+  ]
 }
